--- a/config/menus.yml
+++ b/config/menus.yml
@@ -580,167 +580,167 @@ menus:
         - "tools::new"
         - "tools::show"
         - "tools::update"
-  - settings:
-    - my_account:
-      - - "myselves::statistics"
-      - - "myselves::change_password"
-    - rights:
-      - - "users::index"
-        - "users::create"
-        - "users::destroy"
-        - "users::edit"
-        - "users::list"
-        - "users::lock"
-        - "users::new"
-        - "users::show"
-        - "users::unlock"
-        - "users::update"
-      - - "roles::index"
-        - "roles::create"
-        - "roles::destroy"
-        - "roles::edit"
-        - "roles::list"
-        - "roles::new"
-        - "roles::update"
-    - tools:
-      - - "settings::backups"
-        - "settings::backup"
-        - "settings::restore"
-      - - "listings::index"
-        - "listing_nodes::create"
-        - "listing_nodes::destroy"
-        - "listing_nodes::edit"
-        - "listing_nodes::new"
-        - "listing_nodes::update"
-        - "listings::create"
-        - "listings::destroy"
-        - "listings::duplicate"
-        - "listings::edit"
-        - "listings::extract"
-        - "listings::list"
-        - "listings::mail"
-        - "listings::new"
-        - "listings::update"
-      - - "settings::import"
-    - company:
-      - - "establishments::index"
-        - "establishments::create"
-        - "establishments::destroy"
-        - "establishments::edit"
-        - "establishments::list"
-        - "establishments::new"
-        - "establishments::update"
-      - - "departments::index"
-        - "departments::create"
-        - "departments::destroy"
-        - "departments::edit"
-        - "departments::list"
-        - "departments::new"
-        - "departments::update"
-    - parameters:
-      - - "settings::edit"
-        - "settings::update"
-      - - "document_templates::index"
-        - "document_templates::create"
-        - "document_templates::destroy"
-        - "document_templates::duplicate"
-        - "document_templates::edit"
-        - "document_templates::list"
-        - "document_templates::load"
-        - "document_templates::new"
-        - "document_templates::print"
-        - "document_templates::update"
-      - - "sequences::index"
-        - "sequences::create"
-        - "sequences::destroy"
-        - "sequences::edit"
-        - "sequences::list"
-        - "sequences::load"
-        - "sequences::new"
-        - "sequences::update"
-      - - "units::index"
-        - "units::create"
-        - "units::destroy"
-        - "units::edit"
-        - "units::list"
-        - "units::load"
-        - "units::new"
-        - "units::update"
-    - informations:
-      - - "help::index"
-        - "help::show"
-      - - "settings::about"
-    - parameters:
-      - - "custom_fields::index"
-        - "custom_field_choices::create"
-        - "custom_field_choices::destroy"
-        - "custom_field_choices::down"
-        - "custom_field_choices::edit"
-        - "custom_field_choices::new"
-        - "custom_field_choices::up"
-        - "custom_field_choices::update"
-        - "custom_fields::create"
-        - "custom_fields::destroy"
-        - "custom_fields::down"
-        - "custom_fields::edit"
-        - "custom_fields::list"
-        - "custom_fields::list_choices"
-        - "custom_fields::list_choices"
-        - "custom_fields::new"
-        - "custom_fields::show"
-        - "custom_fields::sort"
-        - "custom_fields::up"
-        - "custom_fields::update"
-      - - "entity_natures::index"
-        - "entity_natures::create"
-        - "entity_natures::destroy"
-        - "entity_natures::edit"
-        - "entity_natures::list"
-        - "entity_natures::new"
-        - "entity_natures::update"
-      - - "event_natures::index"
-        - "event_natures::create"
-        - "event_natures::destroy"
-        - "event_natures::edit"
-        - "event_natures::list"
-        - "event_natures::new"
-        - "event_natures::update"
-      - - "entity_categories::index"
-        - "entity_categories::create"
-        - "entity_categories::destroy"
-        - "entity_categories::edit"
-        - "entity_categories::list"
-        - "entity_categories::list_prices"
-        - "entity_categories::new"
-        - "entity_categories::show"
-        - "entity_categories::update"
-      - - "entity_link_natures::index"
-        - "entity_link_natures::create"
-        - "entity_link_natures::destroy"
-        - "entity_link_natures::edit"
-        - "entity_link_natures::list"
-        - "entity_link_natures::new"
-        - "entity_link_natures::update"
-      - - "subscription_natures::index"
-        - "subscription_natures::create"
-        - "subscription_natures::decrement"
-        - "subscription_natures::destroy"
-        - "subscription_natures::edit"
-        - "subscription_natures::increment"
-        - "subscription_natures::list"
-        - "subscription_natures::new"
-        - "subscription_natures::update"
-      - - "areas::index"
-        - "areas::create"
-        - "areas::destroy"
-        - "areas::edit"
-        - "areas::list"
-        - "areas::new"
-        - "areas::update"
-      - - "districts::index"
-        - "districts::create"
-        - "districts::destroy"
-        - "districts::edit"
-        - "districts::list"
-        - "districts::new"
-        - "districts::update"
+  # - settings:
+  #   - my_account:
+  #     - - "myselves::statistics"
+  #     - - "myselves::change_password"
+  #   - rights:
+  #     - - "users::index"
+  #       - "users::create"
+  #       - "users::destroy"
+  #       - "users::edit"
+  #       - "users::list"
+  #       - "users::lock"
+  #       - "users::new"
+  #       - "users::show"
+  #       - "users::unlock"
+  #       - "users::update"
+  #     - - "roles::index"
+  #       - "roles::create"
+  #       - "roles::destroy"
+  #       - "roles::edit"
+  #       - "roles::list"
+  #       - "roles::new"
+  #       - "roles::update"
+  #   - tools:
+  #     - - "settings::backups"
+  #       - "settings::backup"
+  #       - "settings::restore"
+  #     - - "listings::index"
+  #       - "listing_nodes::create"
+  #       - "listing_nodes::destroy"
+  #       - "listing_nodes::edit"
+  #       - "listing_nodes::new"
+  #       - "listing_nodes::update"
+  #       - "listings::create"
+  #       - "listings::destroy"
+  #       - "listings::duplicate"
+  #       - "listings::edit"
+  #       - "listings::extract"
+  #       - "listings::list"
+  #       - "listings::mail"
+  #       - "listings::new"
+  #       - "listings::update"
+  #     - - "settings::import"
+  #   - company:
+  #     - - "establishments::index"
+  #       - "establishments::create"
+  #       - "establishments::destroy"
+  #       - "establishments::edit"
+  #       - "establishments::list"
+  #       - "establishments::new"
+  #       - "establishments::update"
+  #     - - "departments::index"
+  #       - "departments::create"
+  #       - "departments::destroy"
+  #       - "departments::edit"
+  #       - "departments::list"
+  #       - "departments::new"
+  #       - "departments::update"
+  #   - parameters:
+  #     - - "settings::edit"
+  #       - "settings::update"
+  #     - - "document_templates::index"
+  #       - "document_templates::create"
+  #       - "document_templates::destroy"
+  #       - "document_templates::duplicate"
+  #       - "document_templates::edit"
+  #       - "document_templates::list"
+  #       - "document_templates::load"
+  #       - "document_templates::new"
+  #       - "document_templates::print"
+  #       - "document_templates::update"
+  #     - - "sequences::index"
+  #       - "sequences::create"
+  #       - "sequences::destroy"
+  #       - "sequences::edit"
+  #       - "sequences::list"
+  #       - "sequences::load"
+  #       - "sequences::new"
+  #       - "sequences::update"
+  #     - - "units::index"
+  #       - "units::create"
+  #       - "units::destroy"
+  #       - "units::edit"
+  #       - "units::list"
+  #       - "units::load"
+  #       - "units::new"
+  #       - "units::update"
+  #   - informations:
+  #     - - "help::index"
+  #       - "help::show"
+  #     - - "settings::about"
+  #   - parameters:
+  #     - - "custom_fields::index"
+  #       - "custom_field_choices::create"
+  #       - "custom_field_choices::destroy"
+  #       - "custom_field_choices::down"
+  #       - "custom_field_choices::edit"
+  #       - "custom_field_choices::new"
+  #       - "custom_field_choices::up"
+  #       - "custom_field_choices::update"
+  #       - "custom_fields::create"
+  #       - "custom_fields::destroy"
+  #       - "custom_fields::down"
+  #       - "custom_fields::edit"
+  #       - "custom_fields::list"
+  #       - "custom_fields::list_choices"
+  #       - "custom_fields::list_choices"
+  #       - "custom_fields::new"
+  #       - "custom_fields::show"
+  #       - "custom_fields::sort"
+  #       - "custom_fields::up"
+  #       - "custom_fields::update"
+  #     - - "entity_natures::index"
+  #       - "entity_natures::create"
+  #       - "entity_natures::destroy"
+  #       - "entity_natures::edit"
+  #       - "entity_natures::list"
+  #       - "entity_natures::new"
+  #       - "entity_natures::update"
+  #     - - "event_natures::index"
+  #       - "event_natures::create"
+  #       - "event_natures::destroy"
+  #       - "event_natures::edit"
+  #       - "event_natures::list"
+  #       - "event_natures::new"
+  #       - "event_natures::update"
+  #     - - "entity_categories::index"
+  #       - "entity_categories::create"
+  #       - "entity_categories::destroy"
+  #       - "entity_categories::edit"
+  #       - "entity_categories::list"
+  #       - "entity_categories::list_prices"
+  #       - "entity_categories::new"
+  #       - "entity_categories::show"
+  #       - "entity_categories::update"
+  #     - - "entity_link_natures::index"
+  #       - "entity_link_natures::create"
+  #       - "entity_link_natures::destroy"
+  #       - "entity_link_natures::edit"
+  #       - "entity_link_natures::list"
+  #       - "entity_link_natures::new"
+  #       - "entity_link_natures::update"
+  #     - - "subscription_natures::index"
+  #       - "subscription_natures::create"
+  #       - "subscription_natures::decrement"
+  #       - "subscription_natures::destroy"
+  #       - "subscription_natures::edit"
+  #       - "subscription_natures::increment"
+  #       - "subscription_natures::list"
+  #       - "subscription_natures::new"
+  #       - "subscription_natures::update"
+  #     - - "areas::index"
+  #       - "areas::create"
+  #       - "areas::destroy"
+  #       - "areas::edit"
+  #       - "areas::list"
+  #       - "areas::new"
+  #       - "areas::update"
+  #     - - "districts::index"
+  #       - "districts::create"
+  #       - "districts::destroy"
+  #       - "districts::edit"
+  #       - "districts::list"
+  #       - "districts::new"
+  #       - "districts::update"
